--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,7 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     Planner
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="http://127.0.0.1:5000/planner3">Monthly Planner</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/plannermnthly">Monthly Planner</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/plannerwkly">Weekly Planner</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/plannerwork">Work Planner</a>
                 </div>
