--- a/templates/plannerwkly.html
+++ b/templates/plannerwkly.html
@@ -119,7 +119,7 @@
 <div style="margin-left: 50px; margin-right: 50px">
     <div id="top" style="text-align: right" >
         <h1>PLANNER</h1>
-        <p style="font-family: Courier New">{{mytime['LocalTime_Now']}} // {{myweather['main']['temp']}}°F</p>
+        <p style="font-family: Courier New">{{mytime['LocalTime_Now']}} </p>
     </div>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
 
