--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -18,7 +18,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="http://127.0.0.1:5000/plannermnthly">Monthly Planner</a>
                     <a class="dropdown-item" href="http://127.0.0.1:5000/plannerwkly">Weekly Planner</a>
-                    <a class="dropdown-item" href="http://127.0.0.1:5000/plannerwork">Work Planner</a>
+                    <a class="dropdown-item" href="http://127.0.0.1:5000/dailyplanner">Daily Planner</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
