--- a/templates/plannerwkly.html
+++ b/templates/plannerwkly.html
@@ -123,7 +123,8 @@
     </div>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
 
-    <button onclick="location.href='http://127.0.0.1:5000/planner3/'" type="button">Monthly Calendar</button>
+    <button onclick="location.href='http://127.0.0.1:5000/plannermnthly/'" type="button">Monthly Calendar</button>
+    <button onclick="location.href='http://127.0.0.1:5000/plannerdly/'" type="button">Daily Planner</button>
     <button class="mode" onclick="toggleMode()">Toggle Dark Mode</button>
     <input type="checkbox" class="checkbox" id="color" onclick="display(id)">
     <label for="color">Use Colors?</label>
