--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -91,13 +91,13 @@
     <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col-3">
-                <a href="http://127.0.0.1:5000/planner3" class="btn">Monthly Planner</a>
+                <a href="http://127.0.0.1:5000/plannermnthly" class="btn">Monthly Planner</a>
             </div>
             <div class="col-3">
                 <a href="http://127.0.0.1:5000/plannerwkly" class="btn">Weekly Planner</a>
             </div>
             <div class="col-3">
-                <a href="http://127.0.0.1:5000/plannerwork" class="btn">Work Planner</a>
+                <a href="http://127.0.0.1:5000/plannerdly" class="btn">Daily Planner</a>
             </div>
         </div>
     </div>
