--- a/templates/plannerdly.html
+++ b/templates/plannerdly.html
@@ -98,21 +98,6 @@
             background: floralwhite;
         }
 
-        .table {
-            display: table;
-            width: 100%;
-            height: 100%;
-        }
-        .cell {
-            display: table-cell;
-            vertical-align: middle;
-            cursor: default;
-        }
-
-        ol {
-            margin-left: -40px;
-            list-style-position: inside;
-        }
         </style>
         <title>Nighthawk Coding | Planner</title>
 </head>
@@ -279,7 +264,8 @@
 
         var time, alarm, currentH, currentM,
             activeAlarm = false,
-            sound = new Audio("https://freesound.org/data/previews/316/316847_4939433-lq.mp3");
+            //had to get a website mp3 format using https://sndup.net/. Here is the alarm in this format https://sndup.net/29dz. Then, I copied the link over.
+            sound = new Audio("https://cdn.sndup.net/29dz/wakeup+%281%29.mp3?token=v9T0OXHU1z0n2gjw3emT5mx8kjEQ_U5b0FI7-zRe0bA&token_path=%2F29dz%2F&expires=1635999805");
         //needed to repeat sound until stop button is clicked
         sound.loop = true;
 
@@ -299,9 +285,9 @@
         function addMinSecVals(id) {
             var select = id;
             var min = 59;
-            //makes the drop down for minutes
+            //makes the drop down for minutes, i++ repeats until the values are done
             for (i = 0; i <= min; i++) {
-                // the ? here is a Ternary Operator, returns a value if the condition is true and another value if it is false
+                // the ? here is a Ternary Operator, returns a value if the condition is true and another value if it is false--- this ensures that a zero is put if there a single digit hour, minute, or second value
                 select.options[select.options.length] = new Option(i < 10 ? "0" + i : i, i < 10 ? "0" + i : i);
             }
         }
