added michael's formatting changes

--- a/templates/plannerdly.html
+++ b/templates/plannerdly.html
@@ -97,7 +97,21 @@
             color: #333;
             background: floralwhite;
         }
+        .table {
+            display: table;
+            width: 100%;
+            height: 100%;
+        }
+        .cell {
+            display: table-cell;
+            vertical-align: middle;
+            cursor: default;
+        }
 
+        ol {
+            margin-left: -40px;
+            list-style-position: inside;
+        }
         </style>
         <title>Nighthawk Coding | Planner</title>
 </head>
