--- a/templates/plannerwkly.html
+++ b/templates/plannerwkly.html
@@ -29,15 +29,15 @@
             font-size: 90px;
         }
         table {
-            width: auto;
+            width: 100%;
             margin-top: 20px;
             text-align: center;
             /*column-rule: 4px dotted rgb(79, 185, 227);*/
         }
+
         .dark-mode {
             background-color: #35363a;
             color: #b3b3b3;
-
         }
 
         th, td{
@@ -58,7 +58,7 @@
             user-select: none;
             -webkit-user-select: none;
             touch-action: manipulation;
-            transition-deration: 0.4s;
+            transition-duration: 0.4s;
         }
         button:hover {
             background-color: floralwhite;
@@ -76,7 +76,7 @@
             user-select: none;
             -webkit-user-select: none;
             touch-action: manipulation;
-            transition-deration: 0.4s;
+            transition-duration: 0.4s;
         }
         label {
             font-family: Raleway;
@@ -119,7 +119,7 @@
 <div style="margin-left: 50px; margin-right: 50px">
     <div id="top" style="text-align: right" >
         <h1>PLANNER</h1>
-        <p style="font-family: Courier New">{{mytime['LocalTime_Now']}} </p>
+        <p style="font-family: Courier New">{{ mytime['LocalTime_Now'] }}</p>
     </div>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
 
@@ -146,6 +146,7 @@
                 <ol id="show_input.{{i}}">
                 </ol>
                 <input placeholder="Task" type="text" class="text" id="task.{{i}}">
+                <br>
                 <button class="task" id="add_task.{{i}}" onclick="display('{{i}}')">Add Task</button>
                 <br>
                 <button class="task" onclick="remove('{{i}}')">Clear Task(s)</button>
