--- a/templates/plannermnthly.html
+++ b/templates/plannermnthly.html
@@ -287,7 +287,7 @@
         <tr>
             <td>
                 <input type="checkbox" name="A" class="checkbox" id="firstcondition" value="1">
-                <label for="firstcondition">Are You Satisfied with the Progress?</label
+                <label for="firstcondition">Are You Satisfied with the Progress?</label>
             </td>
 
             <td>
